--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.10.11",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/styles": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "date-fns": "^2.22.1",
+    "jwt-decode": "^3.1.2",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -16,6 +24,7 @@
     "redux-i18n": "^1.5.22",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "sass-loader": "^12.1.0",
     "socket.io-client": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
