--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-use": "^17.2.4",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-i18n": "^1.5.22",
@@ -29,6 +30,8 @@
     "redux-thunk": "^2.3.0",
     "sass-loader": "^12.1.0",
     "socket.io-client": "^4.1.2",
+    "socket.io-react-hook": "^1.0.8",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
